gitops/apps/rhcl-demo/base/resources/apps/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: rhcl-keycloak
  labels:
    app: keycloak-db
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: postgres
          image: registry.redhat.io/rhel9/postgresql-15:latest
          ports:
            - name: pg
              containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: keycloak-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: rhcl-keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  selector:
    app: keycloak-db
  ports:
    - name: pg
      port: 5432
      protocol: TCP
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-api
  namespace: demo
  labels:
    app: secure-api
    version: v1
  annotations:
    argocd.argoproj.io/sync-wave: "12"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-api
  template:
    metadata:
      labels:
        app: secure-api
        version: v1
    spec:
      containers:
        - name: httpbin
          image: ghcr.io/mccutchen/go-httpbin:2.22.1
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: secure-api
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "12"
  labels:
    app: secure-api
spec:
  selector:
    app: secure-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
